--- a/WordGame/WordGame/Base.lproj/Main.storyboard
+++ b/WordGame/WordGame/Base.lproj/Main.storyboard
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CE5-FM-ivV">
-                                <rect key="frame" x="100" y="381.66666666666669" width="193" height="88.666666666666686"/>
+                                <rect key="frame" x="100" y="377.66666666666669" width="193" height="96.666666666666686"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTb-Hr-pt6">
-                                        <rect key="frame" x="0.0" y="0.0" width="193" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="193" height="38.333333333333336"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Start Game"/>
                                         <connections>
@@ -29,9 +29,14 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSf-qV-71h">
-                                        <rect key="frame" x="0.0" y="54.333333333333314" width="193" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="58.333333333333314" width="193" height="38.333333333333343"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="showHighScore"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="High Score"/>
+                                        <connections>
+                                            <action selector="highScoreButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="295-YP-AQq"/>
+                                            <segue destination="TRY-Uq-pKw" kind="show" id="IcL-pq-o9w"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -61,13 +66,13 @@
                                 <rect key="frame" x="10" y="50" width="373" height="36"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ooe-Rn-ePH">
-                                        <rect key="frame" x="0.0" y="0.0" width="268" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="81.333333333333329" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0 points" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oLA-ch-MX7">
-                                        <rect key="frame" x="268" y="0.0" width="105" height="36"/>
+                                        <rect key="frame" x="81.333333333333343" y="0.0" width="291.66666666666663" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -99,7 +104,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yhR-Iv-Whp">
-                                <rect key="frame" x="131" y="744.66666666666663" width="132" height="34.333333333333371"/>
+                                <rect key="frame" x="131" y="740.66666666666663" width="132" height="38.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Check answer"/>
                                 <connections>
@@ -211,6 +216,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3JC-uJ-iAq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1777.8625954198474" y="-356.33802816901408"/>
+        </scene>
+        <!--High Score View Controller-->
+        <scene sceneID="sVq-Eq-ATH">
+            <objects>
+                <viewController storyboardIdentifier="HighScoreViewController" id="TRY-Uq-pKw" customClass="HighScoreViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xZI-if-lTI">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="sWl-jc-PF1">
+                                <rect key="frame" x="0.0" y="25" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScoreCell" id="zOL-Jb-1VA">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="47.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zOL-Jb-1VA" id="ctp-FB-3Ig">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="47.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <accessibility key="accessibilityConfiguration" identifier="ScoreCell"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Fs9-Cb-IsE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sWl-jc-PF1" firstAttribute="leading" secondItem="Fs9-Cb-IsE" secondAttribute="leading" id="7qC-V6-TwD"/>
+                            <constraint firstItem="Fs9-Cb-IsE" firstAttribute="trailing" secondItem="sWl-jc-PF1" secondAttribute="trailing" id="V7g-3i-0we"/>
+                            <constraint firstItem="Fs9-Cb-IsE" firstAttribute="bottom" secondItem="sWl-jc-PF1" secondAttribute="bottom" id="vJ3-8m-3ME"/>
+                            <constraint firstItem="sWl-jc-PF1" firstAttribute="top" secondItem="Fs9-Cb-IsE" secondAttribute="top" id="vo5-7x-7xe"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="r81-vb-0so"/>
+                    <connections>
+                        <outlet property="tableView" destination="sWl-jc-PF1" id="y4J-Qj-G8c"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E2p-V0-Rkz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="917" y="712"/>
         </scene>
     </scenes>
     <resources>
